datetime: Fix setting NTP on Fedora 15

https://bugzilla.gnome.org/show_bug.cgi?id=648556